--- a/_config.yml
+++ b/_config.yml
@@ -17,10 +17,10 @@ minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt"
 # Site Settings
 locale                   : "en-US"
 rtl                      : # true, false (default) # turns direction of the page into right to left for RTL languages
-title                    : "Gyuyeon's Blog"
+title                    : ""
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "Gyuyeonjo"
+name                     : "Gyuyeon Jo"
 description              : "An amazing website."
 url                      : "https://rbdus0715.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
