--- a/_config.yml
+++ b/_config.yml
@@ -127,7 +127,7 @@ author:
       url: "mailto:rbdus0715@gmail.com"
     - label: "Website"
       icon: "fas fa-fw fa-link"
-      # url: "https://your-website.com"
+      url: "https://rbdus0715.github.io"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       # url: "https://twitter.com/"
