--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,6 @@
 category:
   - title: "논문리뷰"
-    url: /category/nonmun/
+    url: /category/논문리뷰/
     children:
       - title: "Audio & speech"
         url: /category/audio-speech/
@@ -8,3 +8,5 @@ category:
         url: /category/computer-vision/
       - title: "NLP"
         url: /category/nlp/
+  - title: "프로젝트"
+    url: /category/프로젝트/
